renamed html file and updated css that centers player

--- a/OJAradio.html
+++ b/OJAradio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> OJA RADIO </title>
-	<link rel= "stylesheet" href = "ojastyle.css" />
+	<link rel= "stylesheet" href = "ojaStyle.css" />
 </head>
 
 <body>
